[gd_scene load_steps=5 format=3 uid="uid://36fw7fg4ovuu"]

[ext_resource type="Script" path="res://Scripts/exit_popup.gd" id="1_2snhu"]
[ext_resource type="PackedScene" uid="uid://cmrna0h0dmrhj" path="res://Components/custom_button.tscn" id="2_h47s6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1wttn"]
bg_color = Color(0.796078, 0.74902, 0.658824, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="LabelSettings" id="LabelSettings_3p40w"]
font_size = 64
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[node name="ExitPopup" type="CanvasLayer"]
layer = 10
script = ExtResource("1_2snhu")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0941176, 0.0941176, 0.0941176, 0.858824)

[node name="Popup" type="Control" parent="."]
self_modulate = Color(0.698039, 0.231373, 1, 1)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -375.0
offset_top = -225.0
offset_right = 375.0
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundColorPanel" type="Panel" parent="Popup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1wttn")

[node name="ConfirmLabel" type="Label" parent="Popup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -218.5
offset_top = -125.0
offset_right = 218.5
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
text = "CONFIRM EXIT"
label_settings = SubResource("LabelSettings_3p40w")

[node name="QuitLabel" type="Label" parent="Popup/ConfirmLabel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -140.5
offset_top = -28.0
offset_right = 140.5
grow_horizontal = 2
grow_vertical = 0
text = "DO YOU WANT TO QUIT THE GAME?
"

[node name="CancelButton" parent="Popup" instance=ExtResource("2_h47s6")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 120.0
offset_top = -150.0
offset_right = 320.0
offset_bottom = -44.0
grow_vertical = 0
text = "cancel"

[node name="OkButton" parent="Popup" instance=ExtResource("2_h47s6")]
custom_minimum_size = Vector2(100, 50)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -343.0
offset_top = -150.0
offset_right = -120.0
offset_bottom = -44.0
grow_horizontal = 0
grow_vertical = 0
text = "ok"

[connection signal="gui_input" from="Background" to="." method="_on_background_gui_input"]
[connection signal="clicked" from="Popup/CancelButton" to="." method="_on_cancel_button_clicked"]
[connection signal="clicked" from="Popup/OkButton" to="." method="_on_ok_button_clicked"]
